# netbird-embed-rs

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
examples/: connect.rs
go-lib/: go.mod  go.sum  netbird_embed.go  proxy.go  socketpair.go  socketpair_unix.go  socketpair_windows.go
src/: error.rs  ffi.rs  lib.rs
