[package]
name = "netbird-embed"
version = "0.1.1"
edition = "2021"
description = "Rust bindings for NetBird's client/embed via Go C-shared FFI"
license = "BSD-3-Clause"
repository = "https://github.com/tham-le/netbird-embed-rs"
keywords = ["netbird", "wireguard", "mesh", "vpn", "ffi"]
categories = ["network-programming"]

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
